--- a/HitomiScrollViewerLib/Views/SearchPage/TagTokenizingTextBox.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/TagTokenizingTextBox.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--x:Name="Root"-->
 <ct:TokenizingTextBox
-    x:Name="Root"
     x:Class="HitomiScrollViewerLib.Views.SearchPage.TagTokenizingTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,7 +9,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    
+
+    DataContext="{x:Bind ViewModel, Mode=OneWay}"
     ItemsSource="{x:Bind ViewModel.SelectedTags, Mode=TwoWay}"
     SuggestedItemsSource="{x:Bind ViewModel.SuggestedItemsSource, Mode=OneWay}"
     SizeChanged="{x:Bind ViewModel.TagTokenizingTextBox_SizeChanged}"
@@ -25,15 +26,17 @@
     <ct:TokenizingTextBox.SuggestedItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
             <TextBlock Text="{x:Bind Value}"
-                       MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"
+                       MaxWidth="{Binding DataContext.TokenTextBlockMaxWidth, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay}"
                        TextWrapping="Wrap"/>
         </DataTemplate>
     </ct:TokenizingTextBox.SuggestedItemTemplate>
     <ct:TokenizingTextBox.TokenItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
             <TextBlock Text="{x:Bind Value}"
-                       MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"
+                       MaxWidth="{Binding DataContext.TokenTextBlockMaxWidth, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay}"
                        TextWrapping="Wrap"/>
+                       <!-- TODO test MaxWidth binding working-->
+                       <!--MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"-->
         </DataTemplate>
     </ct:TokenizingTextBox.TokenItemTemplate>
 </ct:TokenizingTextBox>
