--- a/HitomiScrollViewerLib/Views/SearchPage/SearchLinkItem.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/SearchLinkItem.xaml
@@ -1,18 +1,14 @@
 <Grid
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.SearchLinkItem"
+    x:Class="HitomiScrollViewerLib.Views.SearchPage.SearchLinkItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    ColumnSpacing="16">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="Auto"/>
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-    </Grid.RowDefinitions>
+    ColumnSpacing="16"
+    ColumnDefinitions="*,Auto"
+    RowDefinitions="Auto"
+    >
     <HyperlinkButton Grid.Column="0"
                      NavigateUri="{x:Bind SearchLink}"
                      HorizontalAlignment="Stretch"
@@ -20,7 +16,7 @@
                      VerticalAlignment="Stretch">
         <TextBlock TextWrapping="WrapWholeWords"
                    Style="{StaticResource CaptionTextBlockStyle}"
-                   Text="{x:Bind _displayText}"/>
+                   Text="{x:Bind DisplayText}"/>
     </HyperlinkButton>
     <Button Grid.Column="1" CommandParameter="{x:Bind}">
         <Button.Command>
