--- a/HitomiScrollViewerLib/Views/SearchPage/GalleryLanguageASBWrapper.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/GalleryLanguageASBWrapper.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <StackPanel
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.GalleryLanguageASBWrapper"
+    x:Class="HitomiScrollViewerLib.Views.SearchPage.GalleryLanguageASBWrapper"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
