--- a/HitomiScrollViewerLib/Views/SearchPage/SyncManager.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/SyncManager.xaml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Grid
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.SyncManager"
+    x:Class="HitomiScrollViewerLib.Views.SearchPage.SyncManager"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    ColumnSpacing="8">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="80"/>
-    </Grid.ColumnDefinitions>
-    <Button x:Name="SignInBtn" Grid.Column="0"
+    ColumnSpacing="8"
+    ColumnDefinitions="*,Auto">
+    <Button Grid.Column="0"
             Padding="12 10" HorizontalAlignment="Stretch"
-            Click="SignInBtn_Clicked"
-            IsEnabled="False">
+            Click="{x:Bind ViewModel.SignInBtn_Clicked}"
+            IsEnabled="{x:Bind ViewModel.IsSignInButtonEnabled, Mode=OneWay}">
         <Grid ColumnSpacing="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
@@ -27,14 +24,15 @@
                        Grid.Column="1"
                        TextWrapping="WrapWholeWords"
                        FontSize="16"
-                       HorizontalTextAlignment="Center"/>
+                       HorizontalTextAlignment="Center"
+                       Text="{x:Bind ViewModel.SignInButtonText, Mode=OneWay}"/>
         </Grid>
     </Button>
     <Button x:Name="SyncBtn"
             Grid.Column="1"
-            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-            Click="SyncBtn_Clicked"
-            IsEnabled="False">
+            Padding="16"
+            Click="{x:Bind ViewModel.SyncBtn_Clicked}"
+            IsEnabled="{x:Bind ViewModel.IsSyncButtonEnabled}">
         <SymbolIcon Symbol="Sync"/>
     </Button>
 </Grid>
