--- a/HitomiScrollViewerLib/Views/SearchPage/DownloadItem.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/DownloadItem.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Grid
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.DownloadItem"
+    x:Class="HitomiScrollViewerLib.Views.SearchPage.DownloadItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,6 +14,7 @@
     Padding="16"
     ColumnSpacing="8"
     RowSpacing="4"
+    x:DefaultBindMode="OneWay"
     >
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*"/>
@@ -25,26 +26,36 @@
         <RowDefinition/>
         <RowDefinition/>
     </Grid.RowDefinitions>
-    <TextBlock x:Name="Description" Grid.Row="0" Grid.Column="0"
-               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
-    <ProgressBar x:Name="DownloadProgressBar" Grid.Row="1" Grid.Column="0"
-                 Background="Gray"/>
+    <TextBlock Grid.Row="0" Grid.Column="0"
+               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
+               Text="{x:Bind ViewModel.GalleryDescriptionText}"
+               />
+    <ProgressBar Grid.Row="1" Grid.Column="0"
+                 Value="{x:Bind ViewModel.ProgressBarValue}"
+                 Maximum="{x:Bind ViewModel.ProgressBarMaximum}"
+                 IsEnabled="{x:Bind ViewModel.IsEnabled}"
+                 />
     <TextBlock x:Name="DownloadStatusTextBlock" Grid.Row="2" Grid.Column="0"
-               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
+               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
+               Text="{x:Bind ViewModel.ProgressText}"/>
     <Button x:Name="DownloadControlButton" Grid.Row="0" Grid.Column="1"
-            Click="DownloadControlButton_Clicked"
-            HorizontalAlignment="Stretch"/>
+            HorizontalAlignment="Stretch"
+            IsEnabled="{x:Bind ViewModel.IsEnabled}"
+            Command="{x:Bind ViewModel.DownloadToggleButtonCommand, Mode=OneTime}"
+            />
     <Button x:Name="CancelDownloadButton" Grid.Row="0" Grid.Column="2"
-            Click="CancelDownloadButton_Click"
             x:Uid="/DownloadItem/CancelBtn"
-            HorizontalAlignment="Stretch">
-        <SymbolIcon Symbol="Delete"></SymbolIcon>
+            HorizontalAlignment="Stretch"
+            IsEnabled="{x:Bind ViewModel.IsEnabled}"
+            ToolTipService.ToolTip="{x:Bind ViewModel.DownloadToggleButtonToolTip}"
+            >
+        <SymbolIcon Symbol="Delete"/>
     </Button>
     <ComboBox x:Name="ThreadNumComboBox"
               Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="2"
-              ItemsSource="{x:Bind _threadNums}"
-              SelectedIndex="0"
-              SelectionChanged="ThreadNumComboBox_SelectionChanged">
+              ItemsSource="{x:Bind ViewModel.ThreadNums, Mode=OneTime}"
+              SelectedItem="{x:Bind ViewModel.ThreadNum, Mode=TwoWay}"
+              IsEnabled="{x:Bind ViewModel.IsEnabled}">
         <ComboBox.Header>
             <TextBlock x:Uid="/DownloadItem/ThreadNumComboBoxHeader"/>
         </ComboBox.Header>
