--- a/HitomiScrollViewerLib/Views/SearchPageViews/TagFilterSetEditor.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPageViews/TagFilterSetEditor.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
-    xmlns:sp="using:HitomiScrollViewerLib.Views.SearchPage"
+    xmlns:spv="using:HitomiScrollViewerLib.Views.SearchPageViews"
     mc:Ignorable="d"
     RowSpacing="8"
     >
@@ -79,12 +79,16 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Text="Select Language:"/>
-        <sp:GalleryLanguageASBWrapper HorizontalAlignment="Stretch" ViewModel="{x:Bind ViewModel.GLASBWrapperVM}"/>
+        <ComboBox HorizontalAlignment="Stretch"
+                  DisplayMemberPath="LocalName"
+                  ItemsSource="{x:Bind ViewModel.GalleryLanguages}"
+                  SelectedIndex="{x:Bind ViewModel.GalleryLanguageSelectedIndex, Mode=TwoWay}"
+                  />
         <TextBlock Text="Select Type:"/>
         <ComboBox HorizontalAlignment="Stretch"
                   DisplayMemberPath="DisplayName"
-                  ItemsSource="{x:Bind ViewModel.GalleryTypes}"
-                  SelectedIndex="{x:Bind ViewModel.GalleryTypeComboBoxSelectedIndex, Mode=TwoWay}"
+                  ItemsSource="{x:Bind ViewModel.GalleryTypeEntities}"
+                  SelectedIndex="{x:Bind ViewModel.GalleryTypeSelectedIndex, Mode=TwoWay}"
                   />
         <TextBlock Text="Additional Search Keywords:"/>
         <TextBox HorizontalAlignment="Stretch" Text="{x:Bind ViewModel.ExtraKeywordsText, Mode=TwoWay}" />
@@ -104,7 +108,7 @@
     <Grid ColumnSpacing="8"
           ColumnDefinitions="*,*"
           RowDefinitions="*">
-        <sp:TFSSelector Grid.Column="0" ViewModel="{x:Bind ViewModel.IncludeTFSSelectorVM}"/>
-        <sp:TFSSelector Grid.Column="1" ViewModel="{x:Bind ViewModel.ExcludeTFSSelectorVM}"/>
+        <spv:TFSSelector Grid.Column="0" ViewModel="{x:Bind ViewModel.IncludeTFSSelectorVM}"/>
+        <spv:TFSSelector Grid.Column="1" ViewModel="{x:Bind ViewModel.ExcludeTFSSelectorVM}"/>
     </Grid>
 </Grid>
