--- a/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryItem.xaml
+++ b/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryItem.xaml
@@ -3,10 +3,10 @@
     x:Class="HitomiScrollViewerLib.Views.BrowsePageViews.GalleryItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HitomiScrollViewerLib.Views.BrowsePageViews"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    xmlns:bpvs="using:HitomiScrollViewerLib.Views.BrowsePageViews"
+    >
     <UserControl.Resources>
         <SolidColorBrush x:Key="DoujinshiBrush1" Color="#663333"/>
         <SolidColorBrush x:Key="DoujinshiBrush2" Color="#cc9999"/>
@@ -36,42 +36,75 @@
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Light">
                     <x:String x:Key="TitleBackgroundBrushNumber">2</x:String>
-                    <x:String x:Key="ArtistBackgroundBrushNumber">3</x:String>
+                    <x:String x:Key="SubtitleBackgroundBrushNumber">3</x:String>
                     <x:String x:Key="TextForegroundBrushNumber">1</x:String>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Dark">
                     <x:String x:Key="TitleBackgroundBrushNumber">2</x:String>
-                    <x:String x:Key="ArtistBackgroundBrushNumber">1</x:String>
+                    <x:String x:Key="SubtitleBackgroundBrushNumber">1</x:String>
                     <x:String x:Key="TextForegroundBrushNumber">3</x:String>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-
     <Grid Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
           BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
           CornerRadius="{StaticResource ControlCornerRadius}"
           BorderThickness="1"
-          Margin="8">
+          Margin="8"
+          Padding="8 0"
+          x:Name="RootGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="300"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Padding="8 2" Background="{x:Bind TitleBackgroundBrush}">
-            <TextBlock Style="{StaticResource SubtitleTextBlockStyle}"
-                       Text="{x:Bind ViewModel.Gallery.Title}"/>
-        </Border>
-        <Border Padding="8 2" Background="{x:Bind ArtistBackgroundBrush}">
-            <TextBlock Style="{StaticResource BodyStrongTextBlockStyle}"
+        <Grid Background="{x:Bind TitleBackgroundBrush}"
+              HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0"
+                       Style="{StaticResource SubtitleTextBlockStyle}"
+                       Text="{x:Bind ViewModel.Gallery.Title}"
+                       HorizontalAlignment="Stretch"
+                       TextAlignment="Left"/>
+            <TextBlock Grid.Column="1"
+                       Style="{StaticResource SubtitleTextBlockStyle}"
+                       Text="{x:Bind ViewModel.Gallery.Id}"
+                       HorizontalAlignment="Stretch"
+                       TextAlignment="Right"/>
+        </Grid>
+        <Grid Background="{x:Bind SubtitleBackgroundBrush}"
+              HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0"
+                       Style="{StaticResource BodyStrongTextBlockStyle}"
                        Foreground="{x:Bind TextForegroundBrush}"
-                       Text="Artist 1, Artist 2, Artist 3..."/>
-        </Border>
+                       Text="{x:Bind ViewModel.Gallery.GalleryLanguage.LocalName}"
+                       HorizontalAlignment="Stretch"
+                       TextAlignment="Left"/>
+            <TextBlock Grid.Column="1"
+                       Style="{StaticResource SubtitleTextBlockStyle}"
+                       Foreground="{x:Bind TextForegroundBrush}"
+                       Text="{x:Bind ViewModel.Gallery.GalleryType.DisplayName}"
+                       HorizontalAlignment="Stretch"
+                       TextAlignment="Right"/>
+        </Grid>
         <StackPanel Orientation="Horizontal">
             <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
             <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
             <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
         </StackPanel>
-
+        <ItemsRepeater ItemsSource="{x:Bind ViewModel.TagItemsRepeaterVMs}">
+            <ItemsRepeater.Layout>
+                <StackLayout Orientation="Vertical"/>
+            </ItemsRepeater.Layout>
+        </ItemsRepeater>
     </Grid>
 </UserControl>
