--- a/HitomiScrollViewerLib/Views/CRUDContentDialog.xaml
+++ b/HitomiScrollViewerLib/Views/CRUDContentDialog.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentDialog
-    x:Class="HitomiScrollViewerLib.Views.SearchPageViews.CRUDContentDialog"
+    x:Class="HitomiScrollViewerLib.Views.CRUDContentDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
