--- a/HitomiScrollViewerLib/Views/MainWindow.xaml
+++ b/HitomiScrollViewerLib/Views/MainWindow.xaml
@@ -44,6 +44,7 @@
                                  Background="{StaticResource CardBackgroundFillColorDefaultBrush}"
                                  Message="{x:Bind Message}"
                                  CloseButtonCommand="{x:Bind CloseButtonCommand}"
+                                 CloseButtonCommandParameter="{x:Bind}"
                                  HorizontalAlignment="Stretch"
                                  />
                     </DataTemplate>
