--- a/HitomiScrollViewerLib/Views/PageViews/SearchPage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/SearchPage.xaml
@@ -5,8 +5,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:spviews="using:HitomiScrollViewerLib.Views.SearchPageViews"
+    xmlns:views="using:HitomiScrollViewerLib.Views"
     xmlns:spvms="using:HitomiScrollViewerLib.ViewModels.SearchPageVMs"
-    xmlns:spms="using:HitomiScrollViewerLib.Models.SearchPageModels"
+    xmlns:modles="using:HitomiScrollViewerLib.Models"
     
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
@@ -28,7 +29,7 @@
                     <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <spviews:TagFilterSetEditor ViewModel="{x:Bind ViewModel.TagFilterSetEditorVM}"
+                <views:TagFilterEditor ViewModel="{x:Bind ViewModel.TagFilterSetEditorVM}"
                                             Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"/>
                 <Grid Grid.Row="0" Grid.Column="1"
                       VerticalAlignment="Stretch"
