--- a/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
+++ b/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
@@ -1,21 +1,21 @@
 <Grid
-    x:Class="HitomiScrollViewerLib.Views.SearchPageViews.TagFilterSetEditor"
+    x:Class="HitomiScrollViewerLib.Views.TagFilterEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
-    xmlns:spv="using:HitomiScrollViewerLib.Views.SearchPageViews"
+    xmlns:views="using:HitomiScrollViewerLib.Views"
     mc:Ignorable="d"
     RowSpacing="8"
     >
     <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="*"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
-        <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
-    <Grid x:Name="TagFilterSetControlGrid" ColumnSpacing="8">
+    <Grid x:Name="CrudOperationGrid" ColumnSpacing="8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="Auto"/>
@@ -39,7 +39,6 @@
             <SymbolIcon Symbol="Edit"/>
         </Button>
         <ComboBox DisplayMemberPath="Name"
-                  SelectionChanged="TagFilterSetComboBox_SelectionChanged"
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Visibility="Collapsed"
                   SelectedItem="{x:Bind ViewModel.SelectedTFS, Mode=TwoWay}"
@@ -69,6 +68,18 @@
             <TextBlock TextWrapping="WrapWholeWords" Text="{x:Bind ViewModel.AutoSaveCheckBoxText}"/>
         </CheckBox>
     </Grid>
+    <Grid x:Name="TextBoxesGrid"
+          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+          BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+          CornerRadius="{StaticResource OverlayCornerRadius}"
+          BorderThickness="1"
+          Padding="16"
+          VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+    </Grid>
     <Grid x:Name="LanguageTypeKeywordGrid" ColumnSpacing="16">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -90,25 +101,15 @@
                   ItemsSource="{x:Bind ViewModel.GalleryTypeEntities}"
                   SelectedIndex="{x:Bind ViewModel.GalleryTypeSelectedIndex, Mode=TwoWay}"
                   />
-        <TextBlock Text="Additional Search Keywords:"/>
-        <TextBox HorizontalAlignment="Stretch" Text="{x:Bind ViewModel.ExtraKeywordsText, Mode=TwoWay}" />
+        <TextBlock Text="Search by Title:"/>
+        <TextBox HorizontalAlignment="Stretch" Text="{x:Bind ViewModel.SearchTitleText, Mode=TwoWay}" />
     </Grid>
-    <Grid x:Name="TTTextBoxesGrid"
-          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-          BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-          CornerRadius="{StaticResource OverlayCornerRadius}"
-          BorderThickness="1"
-          Padding="16"
-          VerticalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-    </Grid>
-    <Grid ColumnSpacing="8"
-          ColumnDefinitions="*,*"
-          RowDefinitions="*">
-        <spv:TFSSelector Grid.Column="0" ViewModel="{x:Bind ViewModel.IncludeTFSSelectorVM}"/>
-        <spv:TFSSelector Grid.Column="1" ViewModel="{x:Bind ViewModel.ExcludeTFSSelectorVM}"/>
+    <Grid ColumnSpacing="8">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <views:TFSSelector Grid.Column="0" ViewModel="{x:Bind ViewModel.IncludeTFSSelectorVM}"/>
+        <views:TFSSelector Grid.Column="1" ViewModel="{x:Bind ViewModel.ExcludeTFSSelectorVM}"/>
     </Grid>
 </Grid>
