--- a/HitomiScrollViewerLib/Views/TagTokenizingTextBox.xaml
+++ b/HitomiScrollViewerLib/Views/TagTokenizingTextBox.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--x:Name="Root"-->
 <ct:TokenizingTextBox
-    x:Class="HitomiScrollViewerLib.Views.SearchPageViews.TagTokenizingTextBox"
+    x:Class="HitomiScrollViewerLib.Views.TagTokenizingTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ct="using:CommunityToolkit.WinUI.Controls"
